# SELENIUM-AUTOMATION-FOR-OWNER-NAME

./: .env.example  .eslintrc.json  .gitignore  .vercelignore  20-40 plexes.csv  NODE_22_UPGRADE_AUDIT.md  README.md  SETUP.md  SPA_ROUTING_IMMUNIZATION.md  TARGETING_FIXES_README.md  VERCEL_404_FIX.md  VERCEL_404_FIX_EXECUTION_SUMMARY.md  VERCEL_CONFIG_RULES.md  cache.sqlite  config.js  config.py  debug.js  index.html  main.py  package-lock.json  package.json  project-all-files-2025-11-02  pyproject.toml  requirements.txt  run.bat  run.sh  sample_addresses.csv  sample_addresses_20251102_2320.csv  server.js  setup.bat  setup.js  setup.sh  test_imports.py  tsconfig.json  validateEnv.js  vercel-build.js  vercel.json  vercel.json.backup
api/: index.js
backups/: Copy of 20-40 PLEXES - Sheet1_20251202_192317.csv
middleware/: auth.js  validation.js
routes/: auth.routes.js  health.routes.js  index.js  property.routes.js  upload.routes.js
scraper/: browser.py  cache.py  csv_handler.py  csvio.py  element_finder.py  log.py  montreal_role.py  parsers.py  rate.py  schema.py  selectors.py  sheets.py
scripts/: pre-commit-check.cjs  setup.ts  test-routing-404.cjs  validate-all.cjs  validate-build-config.cjs  validate-json.cjs  validate-node-version.cjs  validate-routing-404.cjs  validate-routing.cjs  validate-vercel-json.cjs  validate-vercel-packages.cjs  validate-vercel-schema.cjs
selectolax/: parser.py
simple_ui/: package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
temp-deploy/: index.html  package.json
tests/: test_api.test.js  test_cli.py  (+4 more)
(+41 files in other folders)
